# test-publish

./: .gitignore  .releaserc.json  CHANGELOG.md  README.md  commitlint.config.js  package-lock.json  package.json  pyproject.toml
.github/workflows/: pr-checks.yml  release.yml
src/test_publish/: __init__.py
tests/: test_hello.py
